# imgui-bgfx-template

./: .gitignore  .gitmodules  CMakeLists.txt  license.md  readme.md
.github/workflows/: build-and-release.yml
assets/app_bundle/: Info.plist.in
cmake/: dependencies.cmake  platform.cmake  sources.cmake  vendor.cmake
src/: state.h  ui.cpp  ui.h  version.h.in
src/backend/bgfx/: disabled_renderers.cpp  imgui_impl_bgfx.cpp  main.cpp
src/backend/darwin/: main.mm
src/backend/linux/: main.cpp
src/backend/win32/: app.rc.in  main.cpp
src/updates/: update.h
